--- a/html/cotisation.html
+++ b/html/cotisation.html
@@ -39,7 +39,7 @@
 
       <!--logo-->
       <div class="logo-container-header">
-        <a href="accueil.html">
+        <a href="../index.html">
           <img src="../img/logo.png" class="logo" alt="logo" />
         </a>
       </div>
@@ -248,7 +248,7 @@
 
     <footer>
       <div class="logocontainer-footer">
-        <a href="accueil.html">
+        <a href="../index.html">
           <img src="../img/logo.png" id="logo-footer" alt="logo" />
         </a>
       </div>
