--- a/html/boutique.html
+++ b/html/boutique.html
@@ -40,7 +40,7 @@
 
       <!--logo-->
       <div class="logo-container-header">
-        <a href="accueil.html">
+        <a href="../index.html">
           <img src="../img/logo.png" class="logo" alt="logo" />
         </a>
       </div>
@@ -353,7 +353,7 @@
 <!--------Footer---------->
 <footer>
   <div class="logocontainer-footer">
-    <a href="asmontigny.html">
+    <a href="../index.html">
       <img src="../img/logo.png" id="logo-footer" alt="logo" />
     </a>
   </div>
