--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="fr">
   <head>
@@ -105,10 +104,13 @@
       <div class="wrap1">
         <img src="img/upscaler.jpg" class="img1" alt="" />
 
-        <p class="texte-wrap"><h1>RES NON VERBA</h1></p>
+        <!-- <p class="texte-wrap"><h1 >RES NON VERBA</h1></p> -->
+        <img src="img/resnonverba.svg" alt="" class="width:2000px;" />
       </div>
 
       <div class="wrap1">
+        <h1>image griffon</h1>
+        <!-- <img src="img/openart-image_EA8i4gdW_1730559360147_raw.png" alt="" /> -->
         <button class="cta">
           <span>Devenir Griffon</span>
 
@@ -117,10 +119,111 @@
             <polyline points="8 1 12 5 8 9"></polyline>
           </svg>
         </button>
+
         <img src="img/upscaler.jpg" class="img2" alt="" />
       </div>
 
       <!--news-->
+
+      <!-- match -->
+      <section class="matchs">
+        <!-- Section des matchs précédents -->
+        <div class="previous">
+          <h2>Matchs Précédents</h2>
+          <div class="match-box">
+            <p class="division">Division 1</p>
+            <div class="match-summary">
+              <span class="team-logo">⚽</span>
+              <span class="score">2 - 1</span>
+              <span class="team-logo">⚽</span>
+            </div>
+          </div>
+          <div class="match-box">
+            <p class="division">Division 2</p>
+            <div class="match-summary">
+              <span class="team-logo">⚽</span>
+              <span class="score">1 - 3</span>
+              <span class="team-logo">⚽</span>
+            </div>
+          </div>
+          <div class="match-box">
+            <p class="division">Division 3</p>
+            <div class="match-summary">
+              <span class="team-logo">⚽</span>
+              <span class="score">0 - 0</span>
+              <span class="team-logo">⚽</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Section des matchs à venir -->
+        <div class="next">
+          <h2>Matchs À Venir</h2>
+          <div class="match-box">
+            <p class="division">Division 1</p>
+            <div class="match-summary">
+              <span class="team-logo">⚽</span>
+              <span class="score">-</span>
+              <span class="team-logo">⚽</span>
+            </div>
+          </div>
+          <div class="match-box">
+            <p class="division">Division 2</p>
+            <div class="match-summary">
+              <span class="team-logo">⚽</span>
+              <span class="score">-</span>
+              <span class="team-logo">⚽</span>
+            </div>
+          </div>
+          <div class="match-box">
+            <p class="division">Division 3</p>
+            <div class="match-summary">
+              <span class="team-logo">⚽</span>
+              <span class="score">-</span>
+              <span class="team-logo">⚽</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Section du classement -->
+        <div class="classement">
+          <h2>Classement</h2>
+          <div class="ranking-table">
+            <table>
+              <thead>
+                <tr>
+                  <th>Équipe</th>
+                  <th>MJ</th>
+                  <th>G</th>
+                  <th>P</th>
+                  <th>Pts</th>
+                  <th>Diff</th>
+                </tr>
+              </thead>
+              <tbody>
+                <!-- Répéter cette ligne pour chaque équipe -->
+                <tr>
+                  <td>Équipe A</td>
+                  <td>10</td>
+                  <td>6</td>
+                  <td>4</td>
+                  <td>18</td>
+                  <td>+10</td>
+                </tr>
+                <tr>
+                  <td>Équipe B</td>
+                  <td>10</td>
+                  <td>5</td>
+                  <td>5</td>
+                  <td>15</td>
+                  <td>+5</td>
+                </tr>
+                <!-- Ajoute d'autres équipes ici -->
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!----FOOTER---->
