--- a/html/equipes.html
+++ b/html/equipes.html
@@ -32,14 +32,14 @@
         <a href="https://www.facebook.com/footmontigny">
           <img src="../img/logo-facebook.png" class="icon" alt="facebook" />
         </a>
-        <a href="https://goo.gl/maps/GkPM55x6QD1F4kCQ7">
+        <a href="https://goo.gl/maps/GkPM55x6QD1F4kCQ7">s
           <img src="../img/icon-google-64.png" class="icon" alt="google" />
         </a>
       </div>
 
       <!--logo-->
       <div class="logo-container-header">
-        <a href="../index.html">
+        <a href="/.">
           <img src="../img/logo.png" class="logo" alt="logo" />
         </a>
       </div>
@@ -49,7 +49,7 @@
         <ul class="menu">
           <!-- Equipes -->
           <li>
-            <a href="equipes.html" class="main-point" aria-haspopup="true">Equipes</a>
+            <a href="./html/equipes" class="main-point" aria-haspopup="true">Equipes</a>
             <ul class="sub-menu">
               <li><a href="equipes.html#jeunes" class="point">Jeunes</a></li>
               <li><a href="equipes.html#seniors" class="point">Seniors</a></li>
