--- a/index.html
+++ b/index.html
@@ -96,21 +96,15 @@
         <img src="img/banner_new.png" alt="banniere" class="banner" />
       </figure>
 
-      <!-- <div class="header-img">
-        <img src="img/pics8.jpg" alt="" />
-        <div class="overlay-text">Bienvenue sur le site officiel de l'AS Montigny</div>
-      </div> -->
-
       <div class="wrap1">
-        <img src="img/texture2.jpg" class="img1" alt="" />
-
-        <!-- <p class="texte-wrap"><h1 >RES NON VERBA</h1></p> -->
-        <img src="img/resnonverba2.svg" class="" alt="resnonverba" style="width: 500px; margin-top: 1vh" />
+        <img src="img/texture2.jpg" class="pattern1" />
+        <div class="new-box">
+          <img src="img/ResNonverba2.svg" class="resnonverba" alt="resnonverba" />
+        </div>
       </div>
 
-      <div class="wrap1">
+      <div class="wrap2">
         <h1>image griffon</h1>
-        <!-- <img src="img/openart-image_EA8i4gdW_1730559360147_raw.png" alt="" /> -->
         <button class="cta">
           <span>Devenir Griffon</span>
 
@@ -120,7 +114,7 @@
           </svg>
         </button>
 
-        <img src="img/upscaler.jpg" class="img2" alt="" />
+        <img src="img/texture2.jpg" class="pattern2" alt="" />
       </div>
 
       <!--news-->
