main page design

--- a/index.html
+++ b/index.html
@@ -98,21 +98,53 @@
 
       <div class="wrap1">
         <img src="img/texture2.jpg" class="pattern1" />
+        <img src="img/ResNonverba2white.svg" class="pattern-overlay" />
         <div class="new-box">
-          <img src="img/ResNonverba2.svg" class="resnonverba" alt="resnonverba" />
+          <div class="content">
+            <h1>Plus qu'un club, une famille</h1>
+            <p class="inter-light">
+              Rejoignez notre grande famille et devenez un Griffon dès aujourd’hui ! Ensemble, nous bâtissons bien plus qu’un
+              simple club : un lieu d’échange, de partage et de passion où chaque membre trouve sa place. Venez vivre cette
+              aventure unique à nos côtés.
+            </p>
+            <button class="cta" id="cta-button">
+              <span>Devenir Griffon</span>
+              <svg width="15px" height="10px" viewBox="0 0 13 10">
+                <path d="M1,5 L11,5"></path>
+                <polyline points="8 1 12 5 8 9"></polyline>
+              </svg>
+            </button>
+          </div>
         </div>
+        <!-- Menu Overlay -->
+        <div class="overlay"></div>
+        <div id="menu"></div>
+        <ul class="links">
+          <li>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSefZiwSjzefVaTx7fm-Jfe9hEDSkHUw_nWXFnjiTq0q7y47gg/viewform">
+              Kids
+            </a>
+          </li>
+          <li style="animation-delay: 0.1s"><a>Jeunes</a></li>
+          <li style="animation-delay: 0.2s"><a>Véterans</a></li>
+          <li style="animation-delay: 0.3s"><a>Séniors</a></li>
+        </ul>
       </div>
 
       <div class="wrap2">
-        <h1>image griffon</h1>
-        <button class="cta">
-          <span>Devenir Griffon</span>
-
-          <svg width="15px" height="10px" viewBox="0 0 13 10">
-            <path d="M1,5 L11,5"></path>
-            <polyline points="8 1 12 5 8 9"></polyline>
-          </svg>
-        </button>
+        <img src="img/veo-psd.svg" class="pattern-overlay2" />
+        <div class="new-box">
+          <div class="content">
+            <h1>Un nouveau monde, des possibilités technologiques en plus.</h1>
+            <p class="inter-light">
+              Le club investi en la technologie pour optimiser son fonctionnement. Depuis 3 ans, le logiciel
+              <b>Pro Soccer Data</b>
+              facilite la communication entre les membres. De plus, depuis la saison 2023/24, une caméra <b>Veo</b> filme les
+              matchs des équipes jouant à 11, permettant d'analyser les performances et de favoriser le développement des
+              joueurs.
+            </p>
+          </div>
+        </div>
 
         <img src="img/texture2.jpg" class="pattern2" alt="" />
       </div>
