--- a/test.html
+++ b/test.html
@@ -4,8 +4,217 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/base.css" />
   </head>
-  <body style="background-color: violet">
-    <img src="img/sponsor1.png" alt="" style="width: 30%; background-color: #640a34" />
+  <body style="background-color: #ffc0cb">
+    <img src="img/mascotte.png" alt="" style="width: 30%; background-color: #640a34" />
+    <h1 style="font-family: Futura Condensed Extra Bold">Plus qu'un club, une famille</h1>
+    <!-- //// -->
+    <div class="overlay"></div>
+    <div id="menu"></div>
+    <ul class="links">
+      <li>
+        <a>About</a>
+      </li>
+      <li style="animation-delay: 0.1s">
+        <a>Portfolio</a>
+      </li>
+      <li style="animation-delay: 0.2s">
+        <a>Services</a>
+      </li>
+      <li style="animation-delay: 0.3s">
+        <a>Contact</a>
+      </li>
+    </ul>
+    <div class="frame">
+      <div class="grid two-col buttons">
+        <div>
+          <p>4</p>
+          <button type="button" onclick="handleClick('four')">Diagonal</button>
+        </div>
+      </div>
+    </div>
+    <script type="text/javascript">
+      const overlay = document.querySelector(".overlay");
+      const menu = document.querySelector("#menu");
+      const links = document.querySelector(".links");
+
+      const handleClick = (buttonId) => {
+        menu.classList = [];
+        menu.classList.add(buttonId);
+        setTimeout(() => {
+          document.body.classList.add("menu-active");
+        }, 100);
+      };
+
+      menu.addEventListener("click", () => {
+        document.body.classList.remove("menu-active");
+
+        setTimeout(() => {
+          menu.classList = [];
+        }, 400);
+      });
+
+      links.addEventListener("click", () => {
+        document.body.classList.remove("menu-active");
+
+        setTimeout(() => {
+          menu.classList = [];
+        }, 400);
+      });
+    </script>
+    <style>
+      .grid.grid.two-col > div {
+        height: 72px;
+        width: 88px;
+      }
+
+      .frame {
+        translate: 0 10px;
+      }
+
+      .frame header {
+        top: -60px;
+      }
+
+      .frame h3 {
+        bottom: -24px;
+      }
+
+      button {
+        font-family: inherit;
+        border: 0;
+        font-size: 10px;
+        padding: 8px 0;
+        border-radius: 3px;
+        cursor: pointer;
+        width: 70px;
+        background: rgba(0 0 0 / 40%);
+        color: #f9f9f9;
+        transition: 0.3s;
+      }
+
+      button:hover {
+        background: rgba(0 0 0 / 100%);
+      }
+
+      html.menu-active,
+      body.menu-active {
+        overflow: hidden;
+      }
+
+      .overlay {
+        position: fixed;
+        z-index: 1;
+        inset: 0;
+        background: rgba(0 0 0 / 20%);
+        opacity: 0;
+        visibility: hidden;
+        transition: 0.3s;
+      }
+
+      body.menu-active .overlay {
+        opacity: 1;
+        visibility: visible;
+      }
+
+      #menu {
+        position: fixed;
+        z-index: 2;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        visibility: hidden;
+        opacity: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: #f9f9f9;
+        background: rgba(0 0 0 / 90%);
+        transition-property: translate, opacity, visibility;
+        transition-duration: 0.3s;
+      }
+
+      body.menu-active #menu {
+        opacity: 1;
+        visibility: visible;
+      }
+
+      .links {
+        position: fixed;
+        z-index: 3;
+        top: 50%;
+        left: 50%;
+        translate: -50% -50%;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        opacity: 0;
+        visibility: hidden;
+        display: grid;
+        place-items: center;
+        transition: 0.175s;
+      }
+
+      body.menu-active .links {
+        opacity: 1;
+        visibility: visible;
+      }
+
+      .links li a {
+        position: relative;
+        font-size: 24px;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        height: 56px;
+        color: #f9f9f9;
+        transition: 0.3s;
+      }
+
+      .links:hover a {
+        opacity: 0.5;
+      }
+
+      .links a:hover {
+        opacity: 1;
+      }
+
+      body.menu-active .links li {
+        opacity: 1;
+        animation: appear 0.5s both;
+      }
+
+      @keyframes appear {
+        0% {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        100% {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+      /* menu-4 */
+
+      #menu.four {
+        transform: skew(-15deg) scale(1.6);
+      }
+
+      body.menu-active #menu.four {
+        animation: menu-4-appear 0.5s forwards;
+      }
+
+      @keyframes menu-4-appear {
+        0% {
+          translate: -200% 0;
+        }
+        100% {
+          translate: 0;
+        }
+      }
+    </style>
   </body>
 </html>
