work oh home page

--- a/index.html
+++ b/index.html
@@ -92,10 +92,12 @@
 
     <!--MAIN-->
     <main>
+      <!-- banniere -->
       <figure class="banniere-container">
         <img src="img/banner_new.png" alt="banniere" class="banner" />
       </figure>
 
+      <!--wrap1-->
       <div class="wrap1">
         <img src="img/texture2.jpg" class="pattern1" />
         <img src="img/ResNonverba2white.svg" class="pattern-overlay" />
@@ -107,7 +109,8 @@
               simple club : un lieu d’échange, de partage et de passion où chaque membre trouve sa place. Venez vivre cette
               aventure unique à nos côtés.
             </p>
-            <button class="cta" id="cta-button">
+
+            <button class="cta" id="cta-button" onclick="handleClick('four')">
               <span>Devenir Griffon</span>
               <svg width="15px" height="10px" viewBox="0 0 13 10">
                 <path d="M1,5 L11,5"></path>
@@ -131,11 +134,12 @@
         </ul>
       </div>
 
+      <!-- wrap2 -->
       <div class="wrap2">
         <img src="img/veo-psd.svg" class="pattern-overlay2" />
         <div class="new-box">
           <div class="content">
-            <h1>Un nouveau monde, des possibilités technologiques en plus.</h1>
+            <h1>Un nouveau monde, plus de technologies.</h1>
             <p class="inter-light">
               Le club investi en la technologie pour optimiser son fonctionnement. Depuis 3 ans, le logiciel
               <b>Pro Soccer Data</b>
@@ -150,7 +154,19 @@
       </div>
 
       <!--news-->
-
+      <div class="oval-shape">
+        <div class="grid-layout">
+          <div class="grid-container">
+            <div class="item item-1"><img src="img/actu-coach1.jpg" alt="" /></div>
+            <div class="item item-2"><img src="img/actu-coach1.jpg" alt="" /></div>
+            <div class="item item-3">3</div>
+            <div class="item item-4">4</div>
+            <div class="item item-5">5</div>
+            <div class="item item-6"><img src="img/actu-coach1.jpg" alt="" /></div>
+            <div class="item item-7"><img src="img/banner-autumn.jpg" alt="" /></div>
+          </div>
+        </div>
+      </div>
       <!-- match -->
       <section class="matchs" style="background-color: #ffff">
         <!-- Section des matchs précédents -->
@@ -256,7 +272,7 @@
     <footer>
       <div class="logocontainer-footer">
         <a href="index.html">
-          <img src="img/logo.png" id="logo-footer" alt="logo" />
+          <img src="img/logo-as.svg" id="logo-footer" alt="logo" />
         </a>
       </div>
 
