--- a/test.html
+++ b/test.html
@@ -3,218 +3,150 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="css/base.css" />
+    <title>Grid Layout</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
-  <body style="background-color: #ffc0cb">
-    <img src="img/mascotte.png" alt="" style="width: 30%; background-color: #640a34" />
-    <h1 style="font-family: Futura Condensed Extra Bold">Plus qu'un club, une famille</h1>
-    <!-- //// -->
-    <div class="overlay"></div>
-    <div id="menu"></div>
-    <ul class="links">
-      <li>
-        <a>About</a>
-      </li>
-      <li style="animation-delay: 0.1s">
-        <a>Portfolio</a>
-      </li>
-      <li style="animation-delay: 0.2s">
-        <a>Services</a>
-      </li>
-      <li style="animation-delay: 0.3s">
-        <a>Contact</a>
-      </li>
-    </ul>
-    <div class="frame">
-      <div class="grid two-col buttons">
-        <div>
-          <p>4</p>
-          <button type="button" onclick="handleClick('four')">Diagonal</button>
-        </div>
+  <body>
+    <div class="grid-layout">
+      <div class="grid-container">
+        <div class="item item-1"><img src="img/actu-coach1.jpg" alt="" /></div>
+        <div class="item item-2"><img src="img/actu-coach1.jpg" alt="" /></div>
+        <div class="item item-3">3</div>
+        <div class="item item-4">4</div>
+        <div class="item item-5">5</div>
+        <div class="item item-6"><img src="img/actu-coach1.jpg" alt="" /></div>
+        <div class="item item-7"><img src="img/banner-autumn.jpg" alt="" /></div>
       </div>
     </div>
-    <script type="text/javascript">
-      const overlay = document.querySelector(".overlay");
-      const menu = document.querySelector("#menu");
-      const links = document.querySelector(".links");
-
-      const handleClick = (buttonId) => {
-        menu.classList = [];
-        menu.classList.add(buttonId);
-        setTimeout(() => {
-          document.body.classList.add("menu-active");
-        }, 100);
-      };
-
-      menu.addEventListener("click", () => {
-        document.body.classList.remove("menu-active");
-
-        setTimeout(() => {
-          menu.classList = [];
-        }, 400);
-      });
-
-      links.addEventListener("click", () => {
-        document.body.classList.remove("menu-active");
-
-        setTimeout(() => {
-          menu.classList = [];
-        }, 400);
-      });
-    </script>
-    <style>
-      .grid.grid.two-col > div {
-        height: 72px;
-        width: 88px;
-      }
-
-      .frame {
-        translate: 0 10px;
-      }
-
-      .frame header {
-        top: -60px;
-      }
-
-      .frame h3 {
-        bottom: -24px;
-      }
-
-      button {
-        font-family: inherit;
-        border: 0;
-        font-size: 10px;
-        padding: 8px 0;
-        border-radius: 3px;
-        cursor: pointer;
-        width: 70px;
-        background: rgba(0 0 0 / 40%);
-        color: #f9f9f9;
-        transition: 0.3s;
-      }
-
-      button:hover {
-        background: rgba(0 0 0 / 100%);
-      }
-
-      html.menu-active,
-      body.menu-active {
-        overflow: hidden;
-      }
-
-      .overlay {
-        position: fixed;
-        z-index: 1;
-        inset: 0;
-        background: rgba(0 0 0 / 20%);
-        opacity: 0;
-        visibility: hidden;
-        transition: 0.3s;
-      }
-
-      body.menu-active .overlay {
-        opacity: 1;
-        visibility: visible;
-      }
-
-      #menu {
-        position: fixed;
-        z-index: 2;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        visibility: hidden;
-        opacity: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        color: #f9f9f9;
-        background: rgba(0 0 0 / 90%);
-        transition-property: translate, opacity, visibility;
-        transition-duration: 0.3s;
-      }
-
-      body.menu-active #menu {
-        opacity: 1;
-        visibility: visible;
-      }
-
-      .links {
-        position: fixed;
-        z-index: 3;
-        top: 50%;
-        left: 50%;
-        translate: -50% -50%;
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        opacity: 0;
-        visibility: hidden;
-        display: grid;
-        place-items: center;
-        transition: 0.175s;
-      }
-
-      body.menu-active .links {
-        opacity: 1;
-        visibility: visible;
-      }
-
-      .links li a {
-        position: relative;
-        font-size: 24px;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        height: 56px;
-        color: #f9f9f9;
-        transition: 0.3s;
-      }
-
-      .links:hover a {
-        opacity: 0.5;
-      }
-
-      .links a:hover {
-        opacity: 1;
-      }
-
-      body.menu-active .links li {
-        opacity: 1;
-        animation: appear 0.5s both;
-      }
-
-      @keyframes appear {
-        0% {
-          opacity: 0;
-          transform: translateY(20px);
-        }
-        100% {
-          opacity: 1;
-          transform: translateY(0);
-        }
-      }
-      /* menu-4 */
-
-      #menu.four {
-        transform: skew(-15deg) scale(1.6);
-      }
-
-      body.menu-active #menu.four {
-        animation: menu-4-appear 0.5s forwards;
-      }
-
-      @keyframes menu-4-appear {
-        0% {
-          translate: -200% 0;
-        }
-        100% {
-          translate: 0;
-        }
-      }
-    </style>
   </body>
 </html>
+
+<style>
+  /* Encapsuler tout dans .grid-layout pour éviter de toucher à des éléments globaux */
+  .grid-layout * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  .grid-layout {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-color: #f3f3f3;
+    font-family: Arial, sans-serif;
+  }
+
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /* 4 colonnes de même largeur */
+    grid-template-rows: repeat(4, 1fr); /* 4 lignes de même hauteur */
+    gap: 15px; /* Espacement entre les éléments */
+    width: 600px; /* Largeur totale du grid */
+    height: 600px; /* Hauteur totale du grid */
+  }
+
+  /* Element styles */
+  .grid-layout .item {
+    background-color: #ff9800;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5em; /* Augmenter la taille du texte */
+    border-radius: 5px;
+    overflow: hidden; /* S'assure que rien ne dépasse du div */
+  }
+
+  /* Image inside the item */
+  .grid-layout .item img {
+    object-fit: cover; /* L'image couvre l'élément sans déformer l'image */
+    width: 100%; /* L'image occupe toute la largeur du conteneur */
+    height: 100%; /* L'image occupe toute la hauteur du conteneur */
+    object-position: center; /* L'image est centrée dans le conteneur */
+  }
+
+  /* Spécification des tailles et positionnement des éléments */
+  .grid-layout .item-1 {
+    grid-column: span 2; /* 2 colonnes */
+    grid-row: span 2; /* 2 lignes */
+  }
+
+  .grid-layout .item-2 {
+    grid-column: 3; /* 3e colonne */
+    grid-row: 1; /* 1ère ligne */
+  }
+
+  .grid-layout .item-3 {
+    grid-column: 4; /* 4e colonne */
+    grid-row: 1; /* 1ère ligne */
+  }
+
+  .grid-layout .item-4 {
+    grid-column: 3; /* 3e colonne */
+    grid-row: 2; /* 2e ligne */
+  }
+
+  .grid-layout .item-5 {
+    grid-column: 4; /* 4e colonne */
+    grid-row: 2; /* 2e ligne */
+  }
+
+  .grid-layout .item-6 {
+    grid-column: span 2; /* 2 colonnes */
+    grid-row: 3; /* 3e ligne */
+  }
+
+  .grid-layout .item-7 {
+    grid-column: 3 / span 2; /* 3e colonne, et s'étend sur 2 colonnes */
+    grid-row: 3; /* 3e ligne */
+  }
+
+  /* Media Query pour responsive */
+  @media (max-width: 600px) {
+    .grid-layout .grid-container {
+      display: grid;
+      grid-template-columns: 1fr 1fr; /* 2 colonnes */
+      grid-template-rows: auto; /* Autres lignes avec hauteur automatique */
+      width: 100%; /* S'adapte à la largeur de l'écran */
+      height: auto; /* Ajuste la hauteur en fonction des éléments */
+    }
+
+    /* Réorganiser les éléments dans le nouveau grid */
+    .grid-layout .item-1 {
+      grid-column: span 2; /* Prend 2 colonnes */
+      grid-row: 1; /* Première ligne */
+    }
+
+    .grid-layout .item-2 {
+      grid-column: 1; /* 1ère colonne */
+      grid-row: 2; /* 2e ligne */
+    }
+
+    .grid-layout .item-3 {
+      grid-column: 2; /* 2e colonne */
+      grid-row: 2; /* 2e ligne */
+    }
+
+    .grid-layout .item-4 {
+      grid-column: 1; /* 1ère colonne */
+      grid-row: 3; /* 3e ligne */
+    }
+
+    .grid-layout .item-5 {
+      grid-column: 2; /* 2e colonne */
+      grid-row: 3; /* 3e ligne */
+    }
+
+    .grid-layout .item-6 {
+      grid-column: 1; /* 1ère colonne */
+      grid-row: 4; /* 4e ligne */
+    }
+
+    .grid-layout .item-7 {
+      grid-column: 2; /* 2e colonne */
+      grid-row: 4; /* 4e ligne */
+    }
+  }
+</style>
