main part of the main page finished

--- a/html/histoire.html
+++ b/html/histoire.html
@@ -99,7 +99,7 @@
         <img class="story-photo" src="../img/old1.jpg" />
 
         <div class="story-info">
-          <p>
+          <p style="font-family: Inter-light">
             En avril 2016, l'AS Montigny a créé sa première équipe, marquant ainsi le début de son parcours sportif. Cette
             équipe pionnière a été formée avec passion et détermination par les fondateurs du club, qui étaient animés par
             une volonté commune de promouvoir le football local. Composée de joueurs talentueux et ambitieux, l'équipe a
