--- a/index.html
+++ b/index.html
@@ -97,172 +97,156 @@
         <img src="img/banner_new.png" alt="banniere" class="banner" />
       </figure>
 
-      <!--wrap1-->
-      <div class="wrap1">
-        <img src="img/texture2.jpg" class="pattern1" />
-        <img src="img/ResNonverba2white.svg" class="pattern-overlay" />
-        <div class="new-box">
-          <div class="content">
-            <h1>Plus qu'un club, une famille</h1>
-            <p class="inter-light">
-              Rejoignez notre grande famille et devenez un Griffon dès aujourd’hui ! Ensemble, nous bâtissons bien plus qu’un
-              simple club : un lieu d’échange, de partage et de passion où chaque membre trouve sa place. Venez vivre cette
-              aventure unique à nos côtés.
-            </p>
+      <section class="wraps">
+        <!--wrap1-->
+        <div class="wrap1">
+          <img src="img/texture2.jpg" class="pattern1" />
+          <img src="img/ResNonverba2white.svg" class="pattern-overlay" />
+          <div class="new-box">
+            <div class="content">
+              <h1>Plus qu'un club, une famille</h1>
+              <p class="inter-light">
+                Rejoignez notre grande famille et devenez un Griffon dès aujourd’hui ! Ensemble, nous bâtissons bien plus
+                qu’un simple club : un lieu d’échange, de partage et de passion où chaque membre trouve sa place. Venez vivre
+                cette aventure unique à nos côtés.
+              </p>
 
-            <button class="cta" id="cta-button" onclick="handleClick('four')">
-              <span>Devenir Griffon</span>
-              <svg width="15px" height="10px" viewBox="0 0 13 10">
-                <path d="M1,5 L11,5"></path>
-                <polyline points="8 1 12 5 8 9"></polyline>
-              </svg>
-            </button>
+              <button class="cta" id="cta-button" onclick="handleClick('four')">
+                <span>Devenir Griffon</span>
+                <svg width="15px" height="10px" viewBox="0 0 13 10">
+                  <path d="M1,5 L11,5"></path>
+                  <polyline points="8 1 12 5 8 9"></polyline>
+                </svg>
+              </button>
+            </div>
           </div>
-        </div>
-        <!-- Menu Overlay -->
-        <div class="overlay"></div>
-        <div id="menu"></div>
-        <ul class="links">
-          <li>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSefZiwSjzefVaTx7fm-Jfe9hEDSkHUw_nWXFnjiTq0q7y47gg/viewform">
-              Kids
-            </a>
-          </li>
-          <li style="animation-delay: 0.1s"><a>Jeunes</a></li>
-          <li style="animation-delay: 0.2s"><a>Véterans</a></li>
-          <li style="animation-delay: 0.3s"><a>Séniors</a></li>
-        </ul>
-      </div>
-
-      <!-- wrap2 -->
-      <div class="wrap2">
-        <img src="img/veo-psd.svg" class="pattern-overlay2" />
-        <div class="new-box">
-          <div class="content">
-            <h1>Un nouveau monde, plus de technologies.</h1>
-            <p class="inter-light">
-              Le club investi en la technologie pour optimiser son fonctionnement. Depuis 3 ans, le logiciel
-              <b>Pro Soccer Data</b>
-              facilite la communication entre les membres. De plus, depuis la saison 2023/24, une caméra <b>Veo</b> filme les
-              matchs des équipes jouant à 11, permettant d'analyser les performances et de favoriser le développement des
-              joueurs.
-            </p>
-          </div>
+          <!-- Menu Overlay -->
+          <div class="overlay"></div>
+          <div id="menu"></div>
+          <ul class="links">
+            <li>
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSefZiwSjzefVaTx7fm-Jfe9hEDSkHUw_nWXFnjiTq0q7y47gg/viewform">
+                Kids
+              </a>
+            </li>
+            <li style="animation-delay: 0.1s"><a>Jeunes</a></li>
+            <li style="animation-delay: 0.2s"><a>Véterans</a></li>
+            <li style="animation-delay: 0.3s"><a>Séniors</a></li>
+          </ul>
         </div>
 
-        <img src="img/texture2.jpg" class="pattern2" alt="" />
-      </div>
+        <!-- wrap2 -->
+        <div class="wrap2">
+          <img src="img/veo-psd.svg" class="pattern-overlay2" />
+          <div class="new-box">
+            <div class="content">
+              <h1>Un nouveau monde, plus de technologies.</h1>
+              <p class="inter-light">
+                Le club investi en la technologie pour optimiser son fonctionnement. Depuis 3 ans, le logiciel
+                <b>Pro Soccer Data</b>
+                facilite la communication entre les membres. De plus, depuis la saison 2023/24, une caméra <b>Veo</b> filme
+                les matchs des équipes jouant à 11, permettant d'analyser les performances et de favoriser le développement
+                des joueurs.
+              </p>
+            </div>
+          </div>
+
+          <img src="img/texture2.jpg" class="pattern2" alt="" />
+        </div>
+      </section>
 
       <!--news-->
-      <div class="oval-shape">
+      <!-- <div class="oval-shape">
         <div class="grid-layout">
           <div class="grid-container">
-            <div class="item item-1"><img src="img/actu-coach1.jpg" alt="" /></div>
+            <div class="item item-1"><img src="img/actu5.jpg" alt="" /></div>
             <div class="item item-2"><img src="img/actu-coach1.jpg" alt="" /></div>
-            <div class="item item-3">3</div>
-            <div class="item item-4">4</div>
-            <div class="item item-5">5</div>
-            <div class="item item-6"><img src="img/actu-coach1.jpg" alt="" /></div>
+            <div class="item item-3"><img src="img/actu1.jpg" alt="" /></div>
+            <div class="item item-4"><img src="img/actu2.jpg" alt="" /></div>
+            <div class="item item-5"><img src="img/actu7.jpg" alt="" /></div>
+            <div class="item item-6"><img src="img/actu10.jpg" alt="" /></div>
             <div class="item item-7"><img src="img/banner-autumn.jpg" alt="" /></div>
           </div>
         </div>
-      </div>
-      <!-- match -->
-      <section class="matchs" style="background-color: #ffff">
+      </div> -->
+
+      <!-- matchs -->
+
+      <section class="matchs">
+        <h1>Calendrier</h1>
         <!-- Section des matchs précédents -->
+
         <div class="previous">
-          <h2>Matchs Précédents</h2>
+          <h2>Dernier match</h2>
+          <div class="titre-match">
+            <h3>U11-R17 2EME TOUR</h3>
+          </div>
+
           <div class="match-box">
-            <p class="division">Division 1</p>
             <div class="match-summary">
-              <span class="team-logo">⚽</span>
+              <div class="team-container">
+                <img
+                  src="https://belgianfootball.s3.eu-central-1.amazonaws.com/s3fs-public/rbfa/img/logos/clubs/09676.jpg"
+                  alt="Équipe A" />
+                <p>Équipe A</p>
+              </div>
               <span class="score">2 - 1</span>
-              <span class="team-logo">⚽</span>
-            </div>
-          </div>
-          <div class="match-box">
-            <p class="division">Division 2</p>
-            <div class="match-summary">
-              <span class="team-logo">⚽</span>
-              <span class="score">1 - 3</span>
-              <span class="team-logo">⚽</span>
-            </div>
-          </div>
-          <div class="match-box">
-            <p class="division">Division 3</p>
-            <div class="match-summary">
-              <span class="team-logo">⚽</span>
-              <span class="score">0 - 0</span>
-              <span class="team-logo">⚽</span>
+              <div class="team-container">
+                <img
+                  src="https://belgianfootball.s3.eu-central-1.amazonaws.com/s3fs-public/rbfa/img/logos/clubs/09579.jpg"
+                  alt="Équipe B" />
+                <p>Équipe B</p>
+              </div>
             </div>
           </div>
         </div>
 
         <!-- Section des matchs à venir -->
         <div class="next">
-          <h2>Matchs À Venir</h2>
-          <div class="match-box">
-            <p class="division">Division 1</p>
-            <div class="match-summary">
-              <span class="team-logo">⚽</span>
-              <span class="score">-</span>
-              <span class="team-logo">⚽</span>
-            </div>
+          <h2>Prochain match</h2>
+          <div class="titre-match">
+            <h3>Matchs à venir</h3>
           </div>
           <div class="match-box">
-            <p class="division">Division 2</p>
             <div class="match-summary">
-              <span class="team-logo">⚽</span>
-              <span class="score">-</span>
-              <span class="team-logo">⚽</span>
-            </div>
-          </div>
-          <div class="match-box">
-            <p class="division">Division 3</p>
-            <div class="match-summary">
-              <span class="team-logo">⚽</span>
-              <span class="score">-</span>
-              <span class="team-logo">⚽</span>
+              <div class="team-container">
+                <img
+                  src="https://belgianfootball.s3.eu-central-1.amazonaws.com/s3fs-public/rbfa/img/logos/clubs/09676.jpg"
+                  alt="Équipe A" />
+                <p>Équipe A</p>
+              </div>
+              <span class="score">2 - 1</span>
+              <div class="team-container">
+                <img
+                  src="https://belgianfootball.s3.eu-central-1.amazonaws.com/s3fs-public/rbfa/img/logos/clubs/09579.jpg"
+                  alt="Équipe B" />
+                <p>Équipe B</p>
+              </div>
             </div>
           </div>
         </div>
 
-        <!-- Section du classement -->
-        <div class="classement">
+        <div class="next">
           <h2>Classement</h2>
-          <div class="ranking-table">
-            <table>
-              <thead>
-                <tr>
-                  <th>Équipe</th>
-                  <th>MJ</th>
-                  <th>G</th>
-                  <th>P</th>
-                  <th>Pts</th>
-                  <th>Diff</th>
-                </tr>
-              </thead>
-              <tbody>
-                <!-- Répéter cette ligne pour chaque équipe -->
-                <tr>
-                  <td>Équipe A</td>
-                  <td>10</td>
-                  <td>6</td>
-                  <td>4</td>
-                  <td>18</td>
-                  <td>+10</td>
-                </tr>
-                <tr>
-                  <td>Équipe B</td>
-                  <td>10</td>
-                  <td>5</td>
-                  <td>5</td>
-                  <td>15</td>
-                  <td>+5</td>
-                </tr>
-                <!-- Ajoute d'autres équipes ici -->
-              </tbody>
-            </table>
+          <div class="titre-match">
+            <h3>Matchs à venir</h3>
+          </div>
+          <div class="match-box">
+            <div class="match-summary">
+              <div class="team-container">
+                <img
+                  src="https://belgianfootball.s3.eu-central-1.amazonaws.com/s3fs-public/rbfa/img/logos/clubs/09676.jpg"
+                  alt="Équipe A" />
+                <p>Équipe A</p>
+              </div>
+              <span class="score">2 - 1</span>
+              <div class="team-container">
+                <img
+                  src="https://belgianfootball.s3.eu-central-1.amazonaws.com/s3fs-public/rbfa/img/logos/clubs/09579.jpg"
+                  alt="Équipe B" />
+                <p>Équipe B</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -283,7 +267,7 @@
             <hr class="hr-footer-1" />
           </h3>
 
-          <p>
+          <p style="max-width: 30vh">
             L'AS Montigny est un club de football amateur fondé en 1985 et situé à Montigny-le-tilleul, à Charleroi. Notre
             club a pour objectif de promouvoir le football amateur et de donner l'opportunité à tous les passionnés de ce
             sport de jouer dans un environnement convivial.
@@ -318,13 +302,39 @@
           </ul>
         </div>
 
+        <div class="footer-section-small">
+          <h3>
+            Saison
+            <hr class="hr-footer-3" />
+          </h3>
+
+          <ul class="liens-footer">
+            <li><a href="html/calendrier.html">Calendrier</a></li>
+            <li><a href="html/cotisation.html">Cotisation</a></li>
+            <li><a href="html/planning.html">Planning</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section-small">
+          <h3>
+            Liens utiles
+            <hr class="hr-footer-3" />
+          </h3>
+
+          <ul class="liens-footer">
+            <li><a href="html/boutique.html">Boutique</a></li>
+            <li><a href="html/events.html">Evénements</a></li>
+            <li><a href="html/contact.html">Contact</a></li>
+          </ul>
+        </div>
+
         <div class="footer-section">
           <h3>
             Contact
             <hr class="hr-footer-2" />
           </h3>
 
-          <p>
+          <p style="max-width: 20vh">
             <img src="img/icon-localisation.png" class="icon-footer" />
             Rue Bois Frion 109, 6110 Montigny-le-Tilleul
           </p>
@@ -332,7 +342,7 @@
             <img src="img/icon-tel.png" class="icon-footer" alt="" />
             0495/282992
           </p>
-          <p>
+          <p style="max-width: 20vh">
             <img src="img/icon-mail.png" class="icon-footer" alt="" />
             michael.dupont@outlook.com
           </p>
